2002-04-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Makefile.in (MODULES): Added irc module.

2002-04-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* mime: Fixed bug #533025.

2002-04-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Makefile.in (doc_generate): Added 'touch' command to prevent
	  multiple execution of target.

	* struct (matrix): Fixed bug #532791.

	* doctools: Fixed SF Bug #535382.

2002-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* doctools: Implemented FR #530059 and FR #527029.

	* Fixed minor formatting errors in several existing doctools
	  manpages.

	* struct (matrix): Fixed bug #532783.

2002-03-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ftpd: Fixed SF Bug #531799.

	* New module:  pop3d. A POP3 server.
	* Makefile.in: Added pop3d.

2002-03-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* math: Update of calculus. #528434

	* report, struct (matrix): Fixed bug #530207.

2002-03-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* textutil (expander): Fixed SF Bug #530056.

2002-03-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* doctools: Fixed bug #528390.

2002-03-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* struct (matrix): Accepted FR #524430 (-nocase).

	* doctools: FR #527716 accepted. Bug #527025 partially fixed.

2002-03-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>  

	* Makefile.in (doc_generate): Added "TCLLIBPATH=$(srcdir)/modules"
	  in front of the mpexpand invocation so that it is forced to use
	  the "expander" package inside of the distribution. This fixes
	  Tcllib Bug #525007 reported by Don Porter
	  <dgp@users.sourceforge.net>.

2002-03-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* New module: dns
	* Makefile.in: updated for new module

2002-02-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>  
